// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokenizer should not lose data when pausing 1`] = `
Array [
  Array [
    "ontextentity",
    38,
  ],
  Array [
    "ontext",
    5,
    12,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing script tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    7,
  ],
  Array [
    "onselfclosingtag",
    9,
  ],
  Array [
    "onopentagname",
    11,
    14,
  ],
  Array [
    "onopentagend",
    14,
  ],
  Array [
    "onclosetag",
    17,
    20,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing style tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onselfclosingtag",
    8,
  ],
  Array [
    "onopentagname",
    10,
    13,
  ],
  Array [
    "onopentagend",
    13,
  ],
  Array [
    "onclosetag",
    16,
    19,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing title tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onselfclosingtag",
    8,
  ],
  Array [
    "onopentagname",
    10,
    13,
  ],
  Array [
    "onopentagend",
    13,
  ],
  Array [
    "onclosetag",
    16,
    19,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal script tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    7,
  ],
  Array [
    "onopentagend",
    7,
  ],
  Array [
    "onclosetag",
    10,
    16,
  ],
  Array [
    "onopentagname",
    18,
    21,
  ],
  Array [
    "onopentagend",
    21,
  ],
  Array [
    "onclosetag",
    24,
    27,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal sitle tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onopentagend",
    6,
  ],
  Array [
    "onclosetag",
    9,
    14,
  ],
  Array [
    "onopentagname",
    16,
    19,
  ],
  Array [
    "onopentagend",
    19,
  ],
  Array [
    "onclosetag",
    22,
    25,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal style tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onopentagend",
    6,
  ],
  Array [
    "onclosetag",
    9,
    14,
  ],
  Array [
    "onopentagname",
    16,
    19,
  ],
  Array [
    "onopentagend",
    19,
  ],
  Array [
    "onclosetag",
    22,
    25,
  ],
  Array [
    "onend",
  ],
]
`;
